--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                        <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                        <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                             <div class="icon-text">0%</div>
                         </div>
                         </a>
@@ -350,7 +350,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                            <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                            <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🚀</div>
                             </div>
                             </a>
@@ -373,7 +373,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">💝</div>
                             </div>
                             </a>
@@ -395,7 +395,7 @@
                             <span class="channel-tag">CHR</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🌱</div>
                             </div>
                             </a>
@@ -417,7 +417,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🐰</div>
                             </div>
                             </a>
@@ -439,7 +439,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">👩🏼</div>
                             </div>
                             </a>
@@ -463,7 +463,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">👨🏾</div>
                             </div>
                             </a>
@@ -484,7 +484,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">☀️</div>
                             </div>
                             </a>
@@ -506,7 +506,7 @@
                             <span class="channel-tag">CHR</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🏖️</div>
                             </div>
                             </a>
@@ -530,7 +530,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">📚</div>
                             </div>
                             </a>
@@ -554,7 +554,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🍻</div>
                             </div>
                             </a>
@@ -577,7 +577,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🛍️</div>
                             </div>
                             </a>
@@ -601,7 +601,7 @@
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🎄</div>
                             </div>
                             </a>
@@ -623,7 +623,7 @@
                             <span class="channel-tag">CHR</span>
                         </div>
                     </div>
-                                                <a href="https://www.notion.so/team/1eb8e2b2-b0fb-81fe-b159-0042e3180a9a/join" target="_blank"><div class="icon-container">
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🏆</div>
                             </div>
                             </a>
