Champions Club added

--- a/index.html
+++ b/index.html
@@ -401,6 +401,28 @@
                             </a>
                             <div class="timeline-dot"></div>
                 </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <div class="promo-type loyalty">Loyalty Program</div>
+                        <div class="promo-title">Perfect Draft Champions Club - Q1</div>
+                        <div class="promo-date">Jan 1 - Mar 31, 2026</div>
+                        <div class="promo-details">
+                            •  Find a good tier list mechanic for Cavist <br>
+                            •  Participation through the App for good measure ? + increase MD coverage<br>
+
+                        </div>
+                        <div class="channel-tags">
+                            <span class="channel-tag">Cavistes Indépendants</span>
+                            <span class="channel-tag">Cavistes Nationaux</span>
+                        </div>
+                    </div>
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
+                                <div class="icon-emoji">🥇</div>
+                            </div>
+                            </a>
+                            <div class="timeline-dot"></div>
+                </div>
                 
                 <div class="timeline-item">
                     <div class="month-marker">APRIL</div>
@@ -490,7 +512,29 @@
                             </a>
                             <div class="timeline-dot"></div>
                 </div>
-                
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <div class="promo-type loyalty">Loyalty Program</div>
+                        <div class="promo-title">Perfect Draft Champions Club - Q2</div>
+                        <div class="promo-date">Apr 1 - Jun 31, 2026</div>
+                        <div class="promo-details">
+                            •  Find a good tier list mechanic for Cavist <br>
+                            •  Participation through the App for good measure ? + increase MD coverage<br>
+
+                        </div>
+                        <div class="channel-tags">
+                            <span class="channel-tag">Cavistes Indépendants</span>
+                            <span class="channel-tag">Cavistes Nationaux</span>
+                        </div>
+                    </div>
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
+                                <div class="icon-emoji">🥇</div>
+                            </div>
+                            </a>
+                            <div class="timeline-dot"></div>
+                </div>
+
                 <div class="timeline-item">
                     <div class="month-marker">JULY</div>
                     <div class="timeline-content">
@@ -532,6 +576,28 @@
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">📚</div>
+                            </div>
+                            </a>
+                            <div class="timeline-dot"></div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <div class="promo-type loyalty">Loyalty Program</div>
+                        <div class="promo-title">Perfect Draft Champions Club - Q3</div>
+                        <div class="promo-date">Jul 1 - Sep 30, 2026</div>
+                        <div class="promo-details">
+                            •  Find a good tier list mechanic for Cavist <br>
+                            •  Participation through the App for good measure ? + increase MD coverage<br>
+
+                        </div>
+                        <div class="channel-tags">
+                            <span class="channel-tag">Cavistes Indépendants</span>
+                            <span class="channel-tag">Cavistes Nationaux</span>
+                        </div>
+                    </div>
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
+                                <div class="icon-emoji">🥇</div>
                             </div>
                             </a>
                             <div class="timeline-dot"></div>
@@ -603,6 +669,28 @@
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🎄</div>
+                            </div>
+                            </a>
+                            <div class="timeline-dot"></div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <div class="promo-type loyalty">Loyalty Program</div>
+                        <div class="promo-title">Perfect Draft Champions Club - Q4</div>
+                        <div class="promo-date">Oct 1 - Dec 31, 2026</div>
+                        <div class="promo-details">
+                            •  Find a good tier list mechanic for Cavist <br>
+                            •  Participation through the App for good measure ? + increase MD coverage<br>
+
+                        </div>
+                        <div class="channel-tags">
+                            <span class="channel-tag">Cavistes Indépendants</span>
+                            <span class="channel-tag">Cavistes Nationaux</span>
+                        </div>
+                    </div>
+                                                <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
+                                <div class="icon-emoji">🥇</div>
                             </div>
                             </a>
                             <div class="timeline-dot"></div>
