tier list added to Champions Club

--- a/index.html
+++ b/index.html
@@ -300,6 +300,56 @@
         opacity: 1;
       }
     }
+     /* Table Styles */
+    .promo-table {
+        width: 100%;
+        margin-top: 12px;
+        border-collapse: collapse;
+        border-radius: 8px;
+        overflow: hidden;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .promo-table-header {
+        font-size: 12px;
+        font-weight: 600;
+        color: #2c3e50;
+        margin-bottom: 8px;
+        margin-top: 8px;
+    }
+
+    .promo-table thead {
+        background-color: #333;
+        color: white;
+    }
+
+    .promo-table th {
+        padding: 10px 12px;
+        text-align: left;
+        font-size: 10px;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+    }
+
+    .promo-table tbody {
+        background-color: white;
+    }
+
+    .promo-table td {
+        padding: 8px 12px;
+        font-size: 10px;
+        color: #34495e;
+        border-bottom: 1px solid #f1f2f6;
+    }
+
+    .promo-table tr:last-child td {
+        border-bottom: none;
+    }
+
+    .promo-table tbody tr:hover {
+        background-color: #f8f9fa;
+    }
     </style>
 </head>
 <body>
@@ -416,12 +466,35 @@
                             <span class="channel-tag">Cavistes Indépendants</span>
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
+                        <table class="promo-table">
+                            <thead>
+                                <tr>
+                                    <th>Tier Level</th>
+                                    <th>Benefits</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Tier 1</td>
+                                    <td>5% discount on all kegs</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 2</td>
+                                    <td>10% discount + exclusive access to new products</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 3</td>
+                                    <td>15% discount + free shipping on all orders</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🥇</div>
                             </div>
                             </a>
                             <div class="timeline-dot"></div>
+
                 </div>
                 
                 <div class="timeline-item">
@@ -438,6 +511,7 @@
                             <span class="channel-tag">Cavistes Indépendants</span>
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
+                        
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🐰</div>
@@ -527,6 +601,28 @@
                             <span class="channel-tag">Cavistes Indépendants</span>
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
+                        <table class="promo-table">
+                            <thead>
+                                <tr>
+                                    <th>Tier Level</th>
+                                    <th>Benefits</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Tier 1</td>
+                                    <td>5% discount on all kegs</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 2</td>
+                                    <td>10% discount + exclusive access to new products</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 3</td>
+                                    <td>15% discount + free shipping on all orders</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🥇</div>
@@ -595,6 +691,28 @@
                             <span class="channel-tag">Cavistes Indépendants</span>
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
+                        <table class="promo-table">
+                            <thead>
+                                <tr>
+                                    <th>Tier Level</th>
+                                    <th>Benefits</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Tier 1</td>
+                                    <td>5% discount on all kegs</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 2</td>
+                                    <td>10% discount + exclusive access to new products</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 3</td>
+                                    <td>15% discount + free shipping on all orders</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🥇</div>
@@ -688,6 +806,28 @@
                             <span class="channel-tag">Cavistes Indépendants</span>
                             <span class="channel-tag">Cavistes Nationaux</span>
                         </div>
+                        <table class="promo-table">
+                            <thead>
+                                <tr>
+                                    <th>Tier Level</th>
+                                    <th>Benefits</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Tier 1</td>
+                                    <td>5% discount on all kegs</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 2</td>
+                                    <td>10% discount + exclusive access to new products</td>
+                                </tr>
+                                <tr>
+                                    <td>Tier 3</td>
+                                    <td>15% discount + free shipping on all orders</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🥇</div>
