CHR Loyalty tier table

--- a/index.html
+++ b/index.html
@@ -850,6 +850,50 @@
                         <div class="channel-tags">
                             <span class="channel-tag">CHR</span>
                         </div>
+                        <table class="promo-table">
+  <thead>
+    <tr>
+      <th>Tier Level</th>
+      <th>Minimum Annual Kegs</th>
+      <th>Cash Rebate</th>
+      <th>Equipment Benefits</th>
+      <th>Marketing Benefits</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1 - Bronze</td>
+      <td>150</td>
+      <td>2% quarterly cashback on keg purchases</td>
+      <td>Standard equipment support</td>
+      <td>Basic POCM materials (branded coasters, tent cards, etc.)</td>
+    </tr>
+    <tr>
+      <td>2 - Silver</td>
+      <td>300</td>
+      <td>4% quarterly cashback + €200 annual bonus</td>
+      <td>Free maintenance visit twice per year</td>
+      <td>Premium POCM kit (tap handles, branded glasses, etc.)</td>
+    </tr>
+    <tr>
+      <td>3 - Gold</td>
+      <td>500</td>
+      <td>6% quarterly cashback + €500 annual bonus</td>
+      <td>Free machine replacement/upgrade every 3 years</td>
+      <td>Custom POCM design service + premium materials</td>
+    </tr>
+    <tr>
+      <td>4 - Platinum</td>
+      <td>1,000</td>
+      <td>8% quarterly cashback + €1,000 annual bonus</td>
+      <td>Multiple machine locations, priority new model access</td>
+      <td>Full marketing campaign support, professional materials</td>
+    </tr>
+  </tbody>
+</table>
+
+
+                    </div>
                     </div>
                                                 <a href="https://www.notion.so/1fb8e2b2b0fb80ac9417d04c8a2e29c2?v=1fb8e2b2b0fb81d697d2000ca979050b&source=copy_link" target="_blank"><div class="icon-container">
                                 <div class="icon-emoji">🏆</div>
