--- a/promo-timeline-app/src/index.html
+++ b/promo-timeline-app/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>PerfectDraft Promotions Timeline</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/small cup Black.PNG" type="image/png" style="height: 100%">
+    <link rel="icon" href="img/small cup.PNG" type="image/png" style="max-width: fit-content;">
 
 </head>
 
