--- a/promo-timeline-app/src/index-EUFRLPF44BASX.html
+++ b/promo-timeline-app/src/index-EUFRLPF44BASX.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>- PerfectDraft Promotions Timeline</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/favicon%20small.ico" type="image/png" style="max-width: fit-content;">
+    <link rel="icon" href="img/favicon small.ico" type="image/png" style="max-width: fit-content;">
 
 </head>
 
