--- a/promo-timeline-app/src/summary timeline.html
+++ b/promo-timeline-app/src/summary timeline.html
@@ -41,89 +41,16 @@
             </div>
         </div>
 
-        <a href="index.html" >
+        <a href="index.html">
             <label style="font-weight:400;" class="multiselect-header">Timeline View ↕️</label>
         </a>
     </div>
-
-
     <div class="slide">
-        <h1>Promotional Calendar 2026 - Icons by Channel and Month</h1>
 
-        <table class="promo-table-HomePage">
-            <thead class="promo-table-HomePage-header"> 
-                <tr>
-                    <th>Channel</th>
-                    <th class="month-header">Jan</th>
-                    <th class="month-header">Feb</th>
-                    <th class="month-header">Mar</th>
-                    <th class="month-header">Apr</th>
-                    <th class="month-header">May</th>
-                    <th class="month-header">Jun</th>
-                    <th class="month-header">Jul</th>
-                    <th class="month-header">Aug</th>
-                    <th class="month-header">Sep</th>
-                    <th class="month-header">Oct</th>
-                    <th class="month-header">Nov</th>
-                    <th class="month-header">Dec</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="channel-header">CHR</td>
-                    <td class="icon-cell">🚀🎯</td>
-                    <td class="icon-cell">📚</td>
-                    <td class="icon-cell">🌱</td>
-                    <td class="empty-cell">-</td>
-                    <td class="icon-cell">📚</td>
-                    <td class="icon-cell">⚽</td>
-                    <td class="icon-cell">🏖️</td>
-                    <td class="empty-cell">-</td>
-                    <td class="icon-cell">🎒</td>
-                    <td class="icon-cell">🍺</td>
-                    <td class="icon-cell">🛍️</td>
-                    <td class="icon-cell">🎄</td>
-                </tr>
-                <tr>
-                    <td class="channel-header">Cavistes Indépendants</td>
-                    <td class="icon-cell">🚀🎯</td>
-                    <td class="icon-cell">💕</td>
-                    <td class="empty-cell">-</td>
-                    <td class="icon-cell">🐰</td>
-                    <td class="icon-cell">💐</td>
-                    <td class="icon-cell">⚽☀️</td>
-                    <td class="icon-cell">-</td>
-                    <td class="empty-cell">-</td>
-                    <td class="icon-cell">🎒</td>
-                    <td class="icon-cell">🍺</td>
-                    <td class="icon-cell">🛍️</td>
-                    <td class="icon-cell">🎄</td>
-                </tr>
-                <tr>
-                    <td class="channel-header">Cavistes Nationaux</td>
-                    <td class="icon-cell">🚀🎯</td>
-                    <td class="icon-cell">💕</td>
-                    <td class="empty-cell">-</td>
-                    <td class="icon-cell">🐰</td>
-                    <td class="icon-cell">💐</td>
-                    <td class="icon-cell">⚽☀️</td>
-                    <td class="icon-cell">-</td>
-                    <td class="empty-cell">-</td>
-                    <td class="icon-cell">🎒</td>
-                    <td class="icon-cell">🍺</td>
-                    <td class="icon-cell">🛍️</td>
-                    <td class="icon-cell">🎄</td>
-                </tr>
-            </tbody>
-        </table>
+        <div id="timeline-root-home-page"></div>
 
-        <div style="margin-top: 20px; font-size: 12px; color: #666;">
-            <p><strong>Legend:</strong> Each icon represents a promotional campaign. Multiple icons in the same cell
-                indicate multiple campaigns running in that month for that channel.</p>
-            <p><strong>Note:</strong> Some promotions span multiple months or have ongoing periods without specific end
-                dates.</p>
-        </div>
     </div>
+    
     <script src="scripts/main.js"></script>
 </body>
 
