--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -13,7 +13,7 @@
 
     <div class="header">
         <div class="logo">
-            <a href="summary timeline.html" class="href">
+            <a href="CommandBoard.html" class="href">
                 <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo">
             </a>
         </div>
