--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <a href="index.html">
+        <a href="PromoTimeline.html">
             <label style="font-weight:400;" class="multiselect-header">Timeline View ↕️</label>
         </a>
     </div>
