all agenda logic fixed

--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -17,6 +17,12 @@
                 <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo">
             </a>
         </div>
+        <a href="CommandBoard.html">
+            <label style="font-weight:400;" class="multiselect-header">Calendar View 📅</label>
+        </a>
+        <a href="3PP.html">
+            <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
+        </a>
     </div>
 
     <div class="slide">
