--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -44,6 +44,9 @@
         <a href="PromoTimeline.html">
             <label style="font-weight:400;" class="multiselect-header">Timeline View ↕️</label>
         </a>
+        <a href="3PP.html">
+            <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
+        </a>
     </div>
     <div class="slide">
 
