--- a/promo-timeline-app/src/PromoTimeline.html
+++ b/promo-timeline-app/src/PromoTimeline.html
@@ -75,6 +75,9 @@
         <a href="CommandBoard.html">
             <label style="font-weight:400;" class="multiselect-header">Calendar View 📅</label>
         </a>
+        <a href="3PP.html">
+            <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
+        </a>
     </div>
     <div class="slide">
         <div id="timeline-root"></div>
