--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -16,7 +16,7 @@
                 <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo">
             </a>
         </div>
-        <div class="filter-container">
+        <div class="filter-block">
             <label for="yearFilter" style="font-weight:600;">Filter by Year:</label>
             <div class="multiselect-container">
                 <div class="multiselect-header" onclick="toggleYearDropdown()">
