--- a/promo-timeline-app/src/PromoTimeline.html
+++ b/promo-timeline-app/src/PromoTimeline.html
@@ -17,7 +17,7 @@
                 <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo">
             </a>
         </div>
-        <div>
+        <div class="filter-block">
             <div class="filter-container">
                 <label for="yearFilter" style="font-weight:600;">Filter by Year:</label>
                 <div class="multiselect-container">
