--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -20,8 +20,8 @@
         <a href="CommandBoard.html">
             <label style="font-weight:400;" class="multiselect-header">Calendar View 📅</label>
         </a>
-        <a href="3PP.html">
-            <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
+        <a href="PromoTimeline.html">
+            <label style="font-weight:400;" class="multiselect-header">Timeline View ↕️</label>
         </a>
     </div>
 
