all good and final

--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -41,19 +41,22 @@
             </div>
         </div>
 
-        <a href="PromoTimeline.html">
-            <label style="font-weight:400;" class="multiselect-header">Timeline View ↕️</label>
-        </a>
-        <a href="3PP.html">
-            <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
-        </a>
+
+        <div>
+            <a href="PromoTimeline.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
+                <label style="font-weight:400;" class="multiselect-header">Timeline View ↕️</label>
+            </a>
+            <a href="3PP.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
+                <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
+            </a>
+        </div>
     </div>
     <div class="slide">
 
         <div id="timeline-root-home-page"></div>
 
     </div>
-    
+
     <script src="scripts/main.js"></script>
 </body>
 
