--- a/promo-timeline-app/src/PromoTimeline.html
+++ b/promo-timeline-app/src/PromoTimeline.html
@@ -72,12 +72,14 @@
                 </div>
             </div>
         </div>
-        <a href="CommandBoard.html">
-            <label style="font-weight:400;" class="multiselect-header">Calendar View 📅</label>
-        </a>
-        <a href="3PP.html">
-            <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
-        </a>
+        <div>
+            <a href="CommandBoard.html" style="display: inline-block; text-decoration: none;">
+                <label style="font-weight:400;" class="multiselect-header">Calendar View 📅</label>
+            </a>
+            <a href="3PP.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
+                <label style="font-weight:400; text-decoration: none;" class="multiselect-header">3PP View 🍺</label>
+            </a>
+        </div>
     </div>
     <div class="slide">
         <div id="timeline-root"></div>
