final update before branching

--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -177,13 +177,17 @@
                 </tr>
                 <tr>
                     <td><img class="threepplogo" src="img/kegs%20front/DELIRIUM FAKE.png" alt=""></td>
-                    <td colspan="12"><span class="channel-tag-budget"
-                            style="font-size: larger; padding: 5px 50px;">Nothing sure for the moment</span></td>
+                    <td colspan="12">
+                        <span class="channel-tag-budget" style="font-size: larger; padding: 5px 50px;">Nothing sure for
+                            the moment</span>
+                    </td>
                 </tr>
                 <tr>
                     <td><img class="threepplogo" src="img/kegs%20front/Keg--Meteor-White-IPA.png" alt=""></td>
-                    <td colspan="12"><span class="channel-tag-budget"
-                            style="font-size: larger; padding: 5px 50px;">Nothing sure for the moment</span></td>
+                    <td colspan="12">
+                        <span class="channel-tag-budget" style="font-size: larger; padding: 5px 50px;">Nothing sure for
+                            the moment</span>
+                    </td>
                 </tr>
 
             </tbody>
