--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -6,7 +6,7 @@
     <title>- 3PP</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/favicon%20small.ico" type="image/png" style="max-width: fit-content;">
-
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
 <body>
