final push for 3PP

--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -176,24 +176,31 @@
                     </td>
                 </tr>
                 <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Peroni.png" alt=""></td>
+                    <td colspan="12">
+                        <span class="channel-tag-budget" style="font-size: larger; padding: 5px 50px;">WIP - Ongoing
+                            discussions</span>
+                    </td>
+                </tr>
+                <tr>
                     <td><img class="threepplogo" src="img/kegs%20front/DELIRIUM FAKE.png" alt=""></td>
                     <td colspan="12">
-                        <span class="channel-tag-budget" style="font-size: larger; padding: 5px 50px;">Nothing sure for
-                            the moment</span>
+                        <span class="channel-tag-budget" style="font-size: larger; padding: 5px 50px;">WIP - Ongoing
+                            discussions</span>
                     </td>
                 </tr>
                 <tr>
                     <td><img class="threepplogo" src="img/kegs%20front/Keg--Meteor-White-IPA.png" alt=""></td>
                     <td colspan="12">
-                        <span class="channel-tag-budget" style="font-size: larger; padding: 5px 50px;">Nothing sure for
-                            the moment</span>
+                        <span class="channel-tag-budget" style="font-size: larger; padding: 5px 50px;">WIP - Ongoing
+                            discussions</span>
                     </td>
                 </tr>
 
             </tbody>
         </table>
 
-<h1 style="margin-top: 30px; color: rgb(204, 24, 24);">3PP CarryOver DTC</h1>
+        <h1 style="margin-top: 30px; color: rgb(204, 24, 24);">3PP CarryOver DTC</h1>
         <table class="threePP-table ">
             <thead class="threePP-table-header">
                 <tr>
@@ -214,25 +221,24 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><img class="threepplogo" src="img/kegs%20front/SAISON DUPONT FAKE.png" alt=""></td>
+                    <td><img class="threepplogo" src="img/kegs%20front/Saison Dupont.png" alt=""></td>
                     <td colspan="8" class="promo-td">
                         <div class="promo-box" HLBudget=1154 2nets=0></div>
                     </td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>                  
+                    <td></td>
                 </tr>
                 <tr>
-                    <td><img class="threepplogo" src="img/kegs%20front/La CHOUFFE FAKE.png"
-                            alt=""></td>
+                    <td><img class="threepplogo" src="img/kegs%20front/La CHOUFFE FAKE.png" alt=""></td>
                     <td colspan="9" class="promo-td">
-                        <div class="promo-box" HLBudget=0 2nets=0></div>
+                        <div class="promo-box" HLBudget=1000 2nets=0></div>
                     </td>
                     <td></td>
                     <td></td>
                     <td></td>
-           
+
                 </tr>
                 <tr>
                     <td><img class="threepplogo" src="img/kegs%20front/Castelain%20Ch'ti%20sans%20verre.PNG" alt="">
@@ -250,10 +256,16 @@
                 <tr>
                     <td><img class="threepplogo" src="img/kegs%20front/FADA%20FAKE.png" alt=""></td>
                     <td colspan="10" class="promo-td">
-                        <div class="promo-box" HLBudget=0 2nets=0></div>
+                        <div class="promo-box" HLBudget=350 2nets=0></div>
                     </td>
                     <td></td>
                     <td></td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Leffe 0.0 FAKE.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box" HLBudget=250 2nets=0></div>
+                    </td>
                 </tr>
             </tbody>
         </table>
@@ -261,7 +273,7 @@
 
 
 
-<h1 style="margin-top: 30px; color: rgb(204, 24, 24);">3PP Delist DTC</h1>
+        <h1 style="margin-top: 30px; color: rgb(204, 24, 24);">3PP Delist DTC</h1>
         <table class="threePP-table ">
             <thead class="threePP-table-header">
                 <tr>
@@ -311,6 +323,13 @@
                         <div class="promo-box-orange" HLBudget=286 2nets=0></div>
                     </td>
                 </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Vocation-Life-and-Death.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box-orange" HLBudget=1016 2nets=0></div>
+                    </td>
+                </tr>
+
 
             </tbody>
         </table>
@@ -325,7 +344,7 @@
             const result = Math.round(count * total);
             const resulteuros = result * twonets;
             const resultKeuros = Math.round(resulteuros / 1000);
-            
+
             if (resultKeuros === 0) {
                 box.textContent = `${result} HL`;
             } else {
