--- a/promo-timeline-app/src/5+1L.html
+++ b/promo-timeline-app/src/5+1L.html
@@ -34,10 +34,10 @@
                 <tr>
                     <th>KEGS</th>
                     <th>Total HL in market</th>
-                    <th>Incremental Vol</th>
+                    <th>Incremental Vol <br> <small>(est. 10%)</small></th>
                     <th>Total cost</th>
                     <th>Incremental Costs</th>
-                    <th>MACO Loss</th>
+                    <th>Vol. needed for <br>EBIDTA neutral</th>
                 </tr>
             </thead>
             <tbody>
@@ -50,9 +50,9 @@
                     </td>
                     <td><span style="font-size: xxx-large; color: rgb(0, 0, 0);"> 948 hl</span></td>
                     <td><span style="font-size: xxx-large; color:  rgb(6, 190, 45);"> 95 hl</span></td>
-                    <td><span style="font-size: xx-large;">-67k€</span></td>
+                    <td><span style="font-size: xxx-large;">-67k€</span></td>
                     <td><span style="font-size: xxx-large; color: rgb(0,0,0);">-</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);">-50k€</span></td>
+                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);"> 323 hl</span></td>
                 </tr>
 
                 <!-- LEFFE -->
@@ -63,9 +63,9 @@
                     </td>
                     <td><span style="font-size: xxx-large; color: rgb(0, 0, 0);"> 1 827 hl</span></td>
                     <td><span style="font-size: xxx-large; color:  rgb(6, 190, 45);"> 183 hl</span></td>
-                    <td><span style="font-size: xx-large;">-102k€</span></td>
+                    <td><span style="font-size: xxx-large;">-102k€</span></td>
                     <td><span style="font-size: xxx-large; color: rgb(0,0,0);">-</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);">-75k€</span></td>
+                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);">570 hl</span></td>
                 </tr>
 
                 <!-- STELLA ARTOIS -->
@@ -76,9 +76,9 @@
                     </td>
                     <td><span style="font-size: xxx-large; color: rgb(0, 0, 0);"> 725 hl</span></td>
                     <td><span style="font-size: xxx-large; color:  rgb(6, 190, 45);"> 73 hl</span></td>
-                    <td><span style="font-size: xx-large;">-37k€</span></td>
+                    <td><span style="font-size: xxx-large;">-37k€</span></td>
                     <td><span style="font-size: xxx-large; color: rgb(0,0,0);">-37k€</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);">-28k€</span></td>
+                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);">246 hl</span></td>
                 </tr>
             </tbody>
         </table>
