--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -312,13 +312,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Leffe-Ambrée-Amber.png" alt=""></td>
+                    <td><img class="threepplogo" src="img/kegs%20front/leffe ambrée.jpg" alt=""></td>
                     <td colspan="12" class="promo-td">
                         <div class="promo-box-orange" HLBudget=50 2nets=0></div>
                     </td>
                 </tr>
                 <tr>
-                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Leffe-Bruin-Brune.png" alt=""></td>
+                    <td><img class="threepplogo" src="img/kegs%20front/leffe-bruin-new.jpg" alt=""></td>
                     <td colspan="12" class="promo-td">
                         <div class="promo-box-orange" HLBudget=286 2nets=0></div>
                     </td>
